# torneio-urca

./: .gitignore  Dockerfile  README.md
.github/workflows/: ci-cd.yml
backend/: Cargo.toml  Dockerfile  database.py  pyproject.toml  reset_and_seed.py  seed.py  seed_pmos2026.py  seed_pmos2026_feminino.py  seed_pmos2026_masculino.py
backend/app/: config.py  constants.py  error.py  main.py  utils.py
backend/app/db/: database.py
backend/app/models/: models.py
backend/app/routes/: announcement.py  auth.py  card.py  file.py  foul.py  game.py  game_day.py  goal.py  group.py  player.py  prizes.py  settings.py  staff.py  taca_da_pinga.py  team.py  tournament.py  user.py
backend/app/schemas/: schemas.py
backend/app/utils/: __init__.py  auth.py  db.py  game_events.py
backend/src/: config.rs  db.rs  error.rs  lib.rs  main.rs
backend/src/card/: dto.rs  mod.rs  route.rs
backend/src/entity/: card.rs  game.rs  game_call.rs  game_event.rs  game_record.rs  gender.rs  goal.rs  group.rs  mod.rs  role.rs  team.rs  tournament.rs  user.rs
backend/src/game/: dto.rs  mod.rs  route.rs
backend/src/goal/: dto.rs  mod.rs  route.rs
backend/src/group/: dto.rs  mod.rs
backend/src/team/: dto.rs  mod.rs  route.rs
backend/src/tournament/: dto.rs  mod.rs  route.rs
backend/src/user/: dto.rs  mod.rs  route.rs
frontend/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  constants.ts  main.ts  theme.ts  utils.ts
frontend/src/components/: AdminPlayerForm.vue  ChangePasswordDialog.vue  DistributeGamesDialog.vue  FooterBar.vue  GameCalendarDialog.vue  GameDaysDialog.vue  GameList.vue  GameManagement.vue  GameManagementDialog.vue  GameResultDialog.vue  GenerateGamesDialog.vue  GenerateGroupsDialog.vue  GroupList.vue  GroupManagement.vue  GroupView.vue  PlayerList.vue  PlayerManagement.vue  RoleManagement.vue  TeamList.vue  TeamManagement.vue  TopBar.vue  TournamentList.vue  TournamentManagement.vue  UserList.vue  (+2 more)
k8s/base/: configmap.yaml  deployment-api.yaml  deployment-web.yaml  deployment.yaml  http-route.yaml  kustomization.yaml  mongodb.yaml  secret.yaml  service-api.yaml  service-web.yaml  service.yaml
(+88 files in other folders)
