[package]
name = "pm-tournament"
version = "0.1.0"
edition = "2024"
authors = ["Daniel Matos <daniel_matos@outlook.pt>"]

[dependencies]
axum = { version = "0.8", features = ["json"] }
bson = { version = "3", features = ["chrono-0_4", "serde", "serde_with-3"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
futures-util = "0.3"
mongodb = { version = "3.3", features = ["bson-3"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["add-extension"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5", features = ["chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
