[project]
name = ""
version = "0.0.1"
dependencies = [
    "fastapi[standard]~=0.115.0",
    "uvicorn~=0.32.0",
    "pymongo~=4.16",
    "pydantic~=2.10",
    "pydantic-settings~=2.7",
    "python-dotenv~=1.0.1",
    "python-multipart~=0.0.12",
    "bcrypt~=5.0.0",
    "PyJWT~=2.12.1",
]
requires-python = "~=3.14.0"

[project.optional-dependencies]
dev = [
    "ruff~=0.9.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff~=0.9.0",
]
